@@ -24,4 +24,15 @@ WORKDIR /app
 COPY --from=builder /app/target/*.jar app.jar
 
 EXPOSE 8080 5005
-ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "-Xmx512m", "-Xms256m", "-jar", "app.jar"]
+RUN mkdir -p /app/logs /app/dumps
+
+ENTRYPOINT ["java",
+  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005",
+  "-Xms256m",
+  "-Xmx512m",
+  "-XX:+HeapDumpOnOutOfMemoryError",
+  "-XX:HeapDumpPath=/app/dumps",
+  "-Xlog:gc*:utctime:file=/app/logs/gc.log:time",
+  "-jar",
+  "app.jar"
+]
